# paths

./: .gitignore  .travis.yml  ChangeLog.md  LICENSE  appveyor.yml  paths.cabal
.github/workflows/: haskell-ci.yml
src/System/: Path.hs
src/System/Path/: IO.hs  Internal.hs  Lens.hs  Native.hs  QQ.hs
src/System/Path/IO/: ByteString.hs  Directory.hs  Handle.hs  Text.hs
src/System/Path/Internal/: Compat.hs  Typeable.hs
