name:                paths
version:             0.1
synopsis:            Library for representing and manipulating type-safe file paths
bug-reports:         https://github.com/hvr/paths/issues
license:             BSD3
license-file:        LICENSE
author:              Herbert Valerio Riedel
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  ChangeLog.md

Flag old-directory
  description: Use directory < 1.2 and old-time
  manual:      False
  default:     False

library
  hs-source-dirs:      src
  exposed-modules:     System.Path
                       System.Path.IO

  default-language:    Haskell2010

  build-depends:       base       >=4.5   && <4.11
                     , directory  >=1.1   && <1.4
                     , time       >=1.4   && <1.9
                     , bytestring >=0.9.2 && <0.11
                     , filepath   >=1.3   && <1.5
                     , deepseq    >=1.3   && <1.5

  if flag(old-directory)
    build-depends:     directory <  1.2, old-time >= 1 && < 1.2
  else
    build-depends:     directory >= 1.2

  ghc-options:         -Wall