cabal-version:       1.12
name:                paths
version:             0.2

synopsis:            Library for representing and manipulating type-safe file paths
description:         This library provides a more type-safe version of 'FilePath's together with thin wrappers around common IO operations.
                     .
                     This library is directly derived from @hackage-security@'s
                     <http://hackage.haskell.org/package/hackage-security-0.5.2.2/docs/Hackage-Security-Util-Path.html Hackage.Security.Util.Path>
                     module.

bug-reports:         https://github.com/hvr/paths/issues
license:             BSD3
license-file:        LICENSE
author:              Herbert Valerio Riedel
copyright:           2015-2017 Well-Typed LLP,
                     2017 Herbert Valerio Riedel
maintainer:          hvr@gnu.org
category:            System
build-type:          Simple

extra-source-files:  ChangeLog.md

Flag directory--LT-1_2
  description: [directory](https://hackage.haskell.org/package/directory) < 1.2
  manual:      False
  default:     False

library
  hs-source-dirs:      src
  exposed-modules:     System.Path
                       System.Path.IO

  default-language:    Haskell2010
  other-extensions:    CPP
                     , ExistentialQuantification
                     , Safe
                     , Trustworthy

  build-depends:       base       >=4.5   && <4.11
                     , directory  >=1.1   && <1.4
                     , time       >=1.4   && <1.9
                     , bytestring >=0.9.2 && <0.11
                     , filepath   >=1.3   && <1.5
                     , deepseq    >=1.3   && <1.5
                     , text       >=0.11  && <1.3

  if flag(directory--LT-1_2)
    build-depends:     directory <  1.2
                     , old-time >= 1 && < 1.2
  else
    build-depends:     directory >= 1.2

  ghc-options:         -Wall

source-repository head
  location: https://github.com/hvr/paths.git
  type: git
